# rag-document-chat-langchain

./: .env.example  .gitignore  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AppLayout.css  AppLayout.jsx  ConfirmModal.css  ConfirmModal.jsx  ProtectedRoute.jsx  Sidebar.css  Sidebar.jsx
frontend/src/context/: AppContext.jsx  AuthContext.jsx
frontend/src/pages/: AdminUsersPage.css  AdminUsersPage.jsx  ChatPage.css  (+12 more)
rag_flow/: .gitignore  app.py  main.py  pyproject.toml  rag_engine.py  requirements.txt
rag_flow/data/: collections.json  pipelines.json  users.json
rag_flow/data/vector_store/c6b1e818-8d36-4348-887d-221137c5278e/: index_metadata.pickle
rag_flow/data/vector_store/d3065f84-18d0-461a-b0aa-90148afb0a90/: index_metadata.pickle
rag_flow/data/vector_store/e6c7883b-e9d1-4fb8-a037-bc4b567ce06d/: index_metadata.pickle
rag_flow/notebook/: document.ipynb  pdf_file.ipynb
rag_flow/notebook/data/txtfile/: artificial_intelligence.txt  cloud_devops.txt  company_overview.txt  contact.txt  faq.txt  mobile_development.txt  web_development.txt
rag_flow/notebook/data/vector_store/: chroma.sqlite3
rag_flow/routers/: __init__.py  auth.py  chat.py  collections.py  pipeline.py
rag_flow/schemas/: api_schemas.py
rag_flow/services/: auth_service.py  embedding_service.py  job_manager.py  llm_service.py  loader_service.py  pipeline_service.py  retriever_service.py  splitter_service.py  vector_service.py
rag_flow/utils/: file_utils.py
rag_flow/workers/: pipeline_worker.py
