[project]
name = "rag-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "notebook>=7.6.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "rq>=2.10.0",
    "redis>=8.0.1",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
    "textract>=2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
